--- a/data/style.css
+++ b/data/style.css
@@ -789,6 +789,15 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 .labeledit select { width: 100% }
 .labeledit tfoot div { float: right; text-align: right }
 
+.ulist .tc1 label { cursor: pointer }
+.ulist .tc1 input { display: none }
+.ulist .tc1 label:before { content: '▸ ' }
+.ulist .tc1 input:checked + label:before { content: '▾ ' }
+.ulist .tc1 { white-space: nowrap; width: 60px }
+.ulist .tc2 b { margin-left: 10px }
+.ulist .tc4 { white-space: nowrap; width: 60px; text-align: right; padding-right: 10px }
+.ulist .tc5, .ulist .tc6, .ulist .tc7 { white-space: nowrap; width: 100px }
+
 
 /***** User VN list browser ******/
 
