--- a/data/style.css
+++ b/data/style.css
@@ -796,6 +796,7 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 .ulist .tc1 { white-space: nowrap; width: 60px }
 .ulist .tc2 b { margin-left: 10px }
 .ulist .tc4 { white-space: nowrap; width: 60px; text-align: right; padding-right: 10px }
+.ulist .tc4 input { width: 55px; text-align: right }
 .ulist .tc5, .ulist .tc6, .ulist .tc7 { white-space: nowrap; width: 100px }
 
 
