--- a/data/style.css
+++ b/data/style.css
@@ -800,6 +800,12 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 .ulist .tc4 input { width: 55px; text-align: right }
 .ulist .tc5, .ulist .tc6, .ulist .tc7 { white-space: nowrap; width: 100px }
 
+.ulist .tc6   div,      .ulist .tc7 div      { height: 1em }
+.ulist .tc6   div span, .ulist .tc7 div span { position: absolute; z-index: 0 }
+.ulist .tc6   div       input,       .ulist .tc7 div       input       { position: absolute; z-index: 900; width: 110px; visibility: hidden }
+.ulist .tc6   div:hover input,       .ulist .tc7 div:hover input,
+.ulist .tc6   div       input:focus, .ulist .tc7 div       input:focus { visibility: visible }
+
 .labeledit > a { color: $maintext$; display: block; border: none!important }
 .labeledit > a > span { float: right; width: 16px; text-align: right; display: inline-block }
 .labeledit > a > span i { visibility: hidden; font-style: normal }
