--- a/data/style.css
+++ b/data/style.css
@@ -159,8 +159,8 @@ p.linkradio { padding: 2px }
 .linkradio input:checked + label:before { content: '✓' }
 .linkradio em { font-weight: normal; font-style: normal; color: $grayedout$ }
 
-.spinner { content: ''; border: 3px solid #9eaebd; border-bottom-color: transparent; border-radius: 100%; animation: spin 1s infinite linear; width: 14px; height: 14px; display: inline-block; margin: auto }
-span.spinner { width: 1ex; height: 1ex }
+.spinner { content: ''; box-sizing: border-box; border: 3px solid #9eaebd; border-bottom-color: transparent; border-radius: 100%; animation: spin 1s infinite linear; width: 16px; height: 16px; display: inline-block; margin: auto }
+span.spinner { width: 1em; height: 1em }
 @keyframes spin { from { transform:rotate(0deg); } to { transform:rotate(360deg); } }
 
 .textpreview .head { width: 100%; text-align: right }
@@ -816,6 +816,14 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 .labeledit > div > ul li { white-space: nowrap }
 .labeledit > div > ul li label { display: block; padding-left: 10px; border: 0; padding: 3px 5px 3px 3px }
 .labeledit > div > ul li label:hover { background: $boxbg$ }
+
+.ulist .tc_opt { padding: 0 0 5px 70px }
+.ulist .tc_opt textarea { width: 500px; height: 50px }
+.ulist .tc_opt textarea + div { display: inline-block; padding-left: 10px }
+.ulist .tc_opt .tco1 { white-space: nowrap; width: 70px }
+.ulist .tc_opt .tco2 { white-space: nowrap; width: 70px }
+.ulist .tc_opt .tco3 { white-space: nowrap; width: 100px }
+.ulist .tc_opt .tco4 { white-space: nowrap; width: 60px; text-align: right; padding-bottom: 0 }
 
 
 /***** User VN list browser ******/
