--- a/data/style.css
+++ b/data/style.css
@@ -80,6 +80,20 @@ div.warning h2, div.notice h2 { font-size: 13px; font-weight: bold; margin: 0; }
 #ds_box tr.selected { background: $boxbg$; }
 #ds_box table       { width: 100%; }
 
+/* Elm dropdowns */
+.elm_dd > a { color: $maintext$; display: block; border: none!important }
+.elm_dd > a > span { float: right; width: 16px; text-align: right; display: inline-block }
+.elm_dd > a > span i { visibility: hidden; font-style: normal }
+.elm_dd > a:hover > span > i,
+.elm_dd > a:focus > span > i { visibility: visible }
+.elm_dd > div { position: relative; float: right; width: 0; height: 0 }
+.elm_dd > div > ul { position: absolute; right: -10px; top: 0; border: 1px solid $border$; background-color: $secbg$; z-index: 1000; list-style-type: none; margin: 0; padding: 0 }
+.elm_dd > div > ul li { white-space: nowrap }
+.elm_dd > div > ul li label,
+.elm_dd > div > ul li     a { display: block; padding-left: 10px; border: 0; padding: 3px 5px 3px 3px }
+.elm_dd > div > ul li label:hover,
+.elm_dd > div > ul li     a:hover { background: $boxbg$ }
+
 
 
 /* general text formatting */
@@ -807,24 +821,12 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 .ulist .tc6   div:hover input,       .ulist .tc7 div:hover input,
 .ulist .tc6   div       input:focus, .ulist .tc7 div       input:focus { visibility: visible }
 
-.labeledit > a { color: $maintext$; display: block; border: none!important }
-.labeledit > a > span { float: right; width: 16px; text-align: right; display: inline-block }
-.labeledit > a > span i { visibility: hidden; font-style: normal }
-.labeledit > a:hover > span > i,
-.labeledit > a:focus > span > i { visibility: visible }
-.labeledit > div { position: relative; float: right; width: 0; height: 0 }
-.labeledit > div > ul { position: absolute; right: -10px; top: 0; border: 1px solid $border$; background-color: $secbg$; z-index: 1000; list-style-type: none; margin: 0; padding: 0 }
-.labeledit > div > ul li { white-space: nowrap }
-.labeledit > div > ul li label { display: block; padding-left: 10px; border: 0; padding: 3px 5px 3px 3px }
-.labeledit > div > ul li label:hover { background: $boxbg$ }
-
 .ulist .tc_opt { padding: 0 0 5px 70px }
 .ulist .tc_opt textarea { width: 500px; height: 50px }
 .ulist .tc_opt textarea + div { display: inline-block; padding-left: 10px }
-.ulist .tc_opt .tco1 { white-space: nowrap; width: 70px }
-.ulist .tc_opt .tco2 { white-space: nowrap; width: 70px }
-.ulist .tc_opt .tco3 { white-space: nowrap; width: 100px }
-.ulist .tc_opt .tco4 { white-space: nowrap; width: 60px; text-align: right; padding-bottom: 0 }
+.ulist .tc_opt .tco1 { white-space: nowrap; width: 100px }
+.ulist .tc_opt .tco2 { white-space: nowrap; width: 100px }
+.ulist .tc_opt .tco3 { white-space: nowrap; width: 60px; text-align: right; padding-bottom: 0 }
 
 
 /***** User VN list browser ******/
