--- a/data/style.css
+++ b/data/style.css
@@ -317,13 +317,11 @@ p#searchtabs a:hover, p#searchtabs a.sel {
 
 /* history browser */
 
-div.history table    { table-layout: fixed }
-div.history td       { white-space: nowrap }
-div.history td.tc1_1 { width: 70px; padding-left: 0; padding-right: 0; text-align: right }
+div.history td       { white-space: nowrap; padding-left: 15px }
+div.history td.tc1_1 { width: 70px; padding-right: 0; text-align: right }
 div.history td.tc1_2 { width: 30px; padding-left: 0 }
 div.history td.tc2   { width: 140px }
-div.history td.tc3   { width: 110px }
-div.history td.tc4   { overflow: hidden }
+div.history td.tc4   { overflow: hidden; width: 100% }
 div.history td.tc4 b { margin-left: 10px }
 
 
