CSS: Fix weird mainbox sizing when hovering maintabs on history browser
I really need to rewrite that maintabs CSS to be less magical, because
just setting 'overflow:hidden' on the mainbox below it causes weird
behavior. Setting a width seems to kind of magically work around the
problem. Found by experimentation. I have no idea what I'm doing.

--- a/data/style.css
+++ b/data/style.css
@@ -218,7 +218,7 @@ div.mainbox, table.mainbox td {
   padding: 5px;
   background: $boxbg$;
 }
-div.mainbox-overflow-hack { overflow: hidden }
+div.mainbox-overflow-hack { overflow: hidden; width: 100% }
 .mainbox h1          { color: $boxtitle$; font-size: 24px; margin: -5px 0 15px 0; }
 .mainbox h2.alttitle { color: $alttitle$; margin: -17px 0 15px 15px; font-weight: normal; }
 .mainbox p           { margin: 3px 20px; }
