--- a/data/style.css
+++ b/data/style.css
@@ -823,7 +823,8 @@ div.votelist td.tc2 { width: 50px; text-align: right; padding-right: 10px }
 .ulist .tc6   div       input:focus, .ulist .tc7 div       input:focus { visibility: visible }
 
 .ulist .tc_opt { padding: 0 0 5px 70px }
-.ulist .tc_opt textarea { width: 500px; height: 50px }
+.ulist .tc_opt textarea { width: 500px; height: 18px; border: none }
+.ulist .tc_opt textarea:focus { height: 50px; border: 1px solid $secborder$ }
 .ulist .tc_opt textarea + div { display: inline-block; padding-left: 10px }
 .ulist .tc_opt .tco1 { white-space: nowrap; width: 100px }
 .ulist .tc_opt .tco2 { white-space: nowrap; width: 100px }
