--- a/data/style.css
+++ b/data/style.css
@@ -564,8 +564,8 @@ div.scr_uploader     { visibility: hidden; overflow: hidden; width: 1px; height:
 .vnbrowse .tc3        { padding: 0; }
 .vnbrowse .tc5        { text-align: right; padding-right: 10px }
 .vnbrowse .tc6        { width: 80px }
-.vnbrowse .tc7        { text-align: right; width: 8px }
-.vnbrowse .tc8        { width: 8px }
+.vnbrowse .tc7        { text-align: right; width: 8px; white-space: nowrap }
+.vnbrowse .tc7 abbr   { display: inline-block; width: 20px; }
 
 
 
