--- a/data/style.css
+++ b/data/style.css
@@ -82,8 +82,8 @@ div.warning h2, div.notice h2 { font-size: 13px; font-weight: bold; margin: 0; }
 #ds_box table       { width: 100%; }
 
 /* Elm dropdowns */
-.elm_dd > a { color: $maintext$; display: block; border: none!important }
-.elm_dd > a > span { float: right; width: 16px; text-align: right; display: inline-block }
+.elm_dd > a { color: $maintext$; display: block; border: none!important; padding-right: 10px; position: relative }
+.elm_dd > a > span { position: absolute; right: 0; top: 0; width: 16px; text-align: right; display: block }
 .elm_dd > a > span i { visibility: hidden; font-style: normal }
 .elm_dd > a:hover > span > i,
 .elm_dd > a:focus > span > i { visibility: visible }
