--- a/data/style.css
+++ b/data/style.css
@@ -82,7 +82,7 @@ div.warning h2, div.notice h2 { font-size: 13px; font-weight: bold; margin: 0; }
 #ds_box table       { width: 100%; }
 
 /* Elm dropdowns */
-.elm_dd > a { color: $maintext$; display: block; border: none!important; padding-right: 15px; position: relative }
+.elm_dd > a { color: $maintext$; display: block; border: none; padding-right: 15px; position: relative }
 .elm_dd > a > span { position: absolute; right: 5px; top: 0; width: 16px; text-align: right; display: block }
 .elm_dd > a > span i { visibility: hidden; font-style: normal }
 .elm_dd > a:hover > span > i,
@@ -96,6 +96,7 @@ div.warning h2, div.notice h2 { font-size: 13px; font-weight: bold; margin: 0; }
 .elm_dd > div > ul li a.active,
 .elm_dd > div > ul li a:hover  { background: $boxbg$ }
 .elm_dd > div > ul li p { white-space: normal; padding: 3px 5px 3px 3px }
+.maintabs .elm_dd > a { box-sizing: border-box; height: 21px; padding: 1px 15px 0 7px; border: 1px solid $border$; border-bottom: none; background-color: $tabbg$; color: $maintext$ }
 
 
 
