--- a/data/style.css
+++ b/data/style.css
@@ -426,16 +426,19 @@ div.vndetails                 { margin: 0 auto; max-width: 820px; }
 div.vnimg                     { float: left; width: 250px; margin: 0 10px; }
 div.vnimg i                   { display: block; width: 100%; text-align: center; font-size: 11px; }
 div.vnimg p                   { text-align: center; padding: 0px; margin: 0; }
-.vndesc h2                    { margin: 5px 0 0 0; }
+div.vndetails h2              { margin: 5px 0 0 0; }
 .vndesc p                     { padding: 0 0 0 5px; }
 p#nsfw_hid                    { display: block; cursor: pointer; }
-div.vndetails > table         { float: left; width: 500px; }
-div.vndetails > table td.key  { width: 90px; }
-div.vndetails > table dt      { float: left; font-style: italic; }
-div.vndetails > table dd      { margin-left: 90px; }
+div.vndetails table           { float: left; width: 500px; }
+div.vndetails table td.key    { width: 90px; }
+div.vndetails table dt        { float: left; font-style: italic; }
+div.vndetails table dd        { margin-left: 90px; }
 div.vndetails td.relations dt { float: none; font-style: normal; }
 div.vndetails td.relations dd { margin-left: 15px; }
 div.vndetails td.anime b      { font-size: 10px; font-weight: normal; padding-right: 4px; }
+.ulistvn     { padding: 5px 0 0 0 }
+.ulistvn > b { font-size: 14px }
+.ulistvn > span { float: right }
 
 div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $border$; padding: 3px 5% 0 5%; text-align: center; }
 #vntags span                  { white-space: nowrap; margin-left: 15px; }
