--- a/data/style.css
+++ b/data/style.css
@@ -948,30 +948,30 @@ div.uposts td.tc4 b { margin-left: 10px }
 
 /***** VN tagmod *****/
 
-#jt_box_tagmod .formtable table td { padding: 1px 5px }
-table.tgl tfoot td          { padding-top: 20px!important; }
-table.tgl .tc_you           { border-right: 1px solid $border$; border-left: 1px solid $border$; width: 150px; text-align: center }
-table.tgl .tc_others        { border-left: 1px solid $border$; width: 150px; text-align: center }
+table.tgl                   { margin: 10px 0 0 20px }
+table.tgl td                { padding: 1px 5px }
+table.tgl tfoot td          { padding-top: 20px }
+table.tgl .tc_you           { border-right: 1px solid $border$; border-left: 1px solid $border$; text-align: center }
+table.tgl .tc_others        { border-left: 1px solid $border$; text-align: center }
 table.tgl .tc_tagname       { min-width: 200px; border-right: 1px solid $border$ }
-table.tgl tbody .tc_tagname { padding-left: 15px!important }
-table.tgl .tc_myvote        { padding-left: 30px!important }
-table.tgl .tc_myover        { padding: 0!important }
-table.tgl .tc_myspoil       { border-right: 1px solid $border$; padding-right: 30px!important; text-align: right; padding-left: 10px!important; cursor: pointer }
-table.tgl .tc_allvote       { padding-left: 30px!important; }
+table.tgl tbody .tc_tagname { padding-left: 15px }
+table.tgl .tc_myvote        { padding: 0 0 0 30px }
+table.tgl .buts a           { box-sizing: border-box; display: block; width: 15px; height: 14px; border: 1px solid $border$; margin: 0; float: left }
+table.tgl .buts a.l0        { border: none; background-color: $border$ }
+table.tgl .buts a.l1        { border: none; background-color: #cf0 }
+table.tgl .buts a.l2        { border: none; background-color: #8f0 }
+table.tgl .buts a.l3        { border: none; background-color: #0f0 }
+table.tgl .buts a.ld        { border: none; background-color: #f00 }
+table.tgl tbody .tc_myover  { padding: 0 5px }
+table.tgl .tc_myspoil       { padding: 0 30px }
+table.tgl .buts a.sn        { border: none; background-color: $border$ }
+table.tgl .buts a.s0        { border: none; background-color: #0f0 }
+table.tgl .buts a.s1        { border: none; background-color: #f80 }
+table.tgl .buts a.s2        { border: none; background-color: #f40 }
+table.tgl .tc_allvote       { border-left: 1px solid $border$; padding: 1px 0 0 30px; }
 table.tgl .tc_allvote i     { font-style: normal; font-size: 10px }
-table.tgl .tc_allspoil      { text-align: right; padding-right: 15px!important; }
-table.tgl .tagmod_cat td    { font-weight: bold }
-.taglvl             { display: block; float: left; width: 8px; height: 13px; border: 1px solid $border$; font-size: 1px; color: $maintext$!important }
-.taglvl0            { width: 15px; border: none; font-size: 10px; text-align: center; }
-div.taglvl0         { font-size: 10px; width: 20px!important }
-div.taglvl          { border: none; width: 10px; height: 14px }
-a.taglvl:hover      { border-bottom: 1px solid transparent }
-.taglvlsel.taglvl-3 { background-color: #f00; border-color: #f00 }
-.taglvlsel.taglvl-2 { background-color: #f40; border-color: #f40 }
-.taglvlsel.taglvl-1 { background-color: #f80; border-color: #f80 }
-.taglvlsel.taglvl1  { background-color: #cf0; border-color: #cf0 }
-.taglvlsel.taglvl2  { background-color: #8f0; border-color: #8f0 }
-.taglvlsel.taglvl3  { background-color: #0f0; border-color: #0f0 }
+table.tgl .tc_allspoil      { text-align: right; padding-right: 15px }
+table.tgl .tagmod_cat td    { font-weight: bold; padding-top: 10px }
 
 
 
