--- a/data/style.css
+++ b/data/style.css
@@ -955,7 +955,9 @@ table.tgl .tc_you           { border-right: 1px solid $border$; border-left: 1px
 table.tgl .tc_others        { border-left: 1px solid $border$; text-align: center }
 table.tgl .tc_tagname       { min-width: 200px; border-right: 1px solid $border$ }
 table.tgl tbody .tc_tagname { padding-left: 15px }
-table.tgl .tc_myvote        { padding: 0 0 0 30px }
+table.tgl .tc_myvote        { padding: 0 0 0 30px; min-width: 100px }
+table.tgl .tc_mynote span   { cursor: pointer }
+table.tgl .noteview         { position: absolute; max-width: 400px; padding: 0 5px 5px 5px; background: $_blendbg$ }
 table.tgl .buts a           { box-sizing: border-box; display: block; width: 15px; height: 14px; border: 1px solid $border$; margin: 0; float: left }
 table.tgl .buts a.l0        { border: none; background-color: $border$ }
 table.tgl .buts a.l1        { border: none; background-color: #cf0 }
@@ -963,7 +965,7 @@ table.tgl .buts a.l2        { border: none; background-color: #8f0 }
 table.tgl .buts a.l3        { border: none; background-color: #0f0 }
 table.tgl .buts a.ld        { border: none; background-color: #f00 }
 table.tgl tbody .tc_myover  { padding: 0 5px }
-table.tgl .tc_myspoil       { padding: 0 30px }
+table.tgl .tc_myspoil       { padding: 0 30px; min-width: 60px }
 table.tgl .buts a.sn        { border: none; background-color: $border$ }
 table.tgl .buts a.s0        { border: none; background-color: #0f0 }
 table.tgl .buts a.s1        { border: none; background-color: #f80 }
