--- a/data/style.css
+++ b/data/style.css
@@ -83,10 +83,10 @@ div.warning h2, div.notice h2 { font-size: 13px; font-weight: bold; margin: 0; }
 
 /* Elm dropdowns */
 .elm_dd > a { color: $maintext$; display: block; border: none; padding-right: 15px; position: relative }
-.elm_dd > a > span { position: absolute; right: 5px; top: 0; width: 16px; text-align: right; display: block }
-.elm_dd > a > span i { visibility: hidden; font-style: normal }
-.elm_dd > a:hover > span > i,
-.elm_dd > a:focus > span > i { visibility: visible }
+.elm_dd > a > span:last-child { position: absolute; right: 5px; top: 0; width: 16px; text-align: right; display: block }
+.elm_dd > a > span:last-child i { visibility: hidden; font-style: normal }
+.elm_dd > a:hover > span:last-child > i,
+.elm_dd > a:focus > span:last-child > i { visibility: visible }
 .elm_dd > div { position: relative; float: right; width: 0; height: 0 }
 .elm_dd > div > ul { position: absolute; right: -10px; top: 0; border: 1px solid $border$; background-color: $secbg$; z-index: 1000; list-style-type: none; margin: 0; padding: 0; max-width: 400px; overflow: hidden }
 .elm_dd.search > div { float: left }
