--- a/data/style.css
+++ b/data/style.css
@@ -1083,7 +1083,7 @@ p.filselect i { font-style: normal }
  *   3: metadata
  *   4: vote box */
 .imageflag { width: 810px; margin: auto }
-.imageflag > div:nth-child(1) { display: flex; justify-content: space-between; height: 20px }
+.imageflag > div:nth-child(1) { display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 2px }
 .imageflag > div:nth-child(1) span { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 0px 20px }
 .imageflag > div:nth-child(2) { border: 1px solid $border$; padding: 5px; display: flex; justify-content: center; align-items: center; background: #000 }
 .imageflag > div:nth-child(2) a { border: none; display: inline-block; width: 100%; height: 100%; background-repeat: no-repeat; background-position: center }
@@ -1093,7 +1093,7 @@ p.filselect i { font-style: normal }
 .imageflag > div:nth-child(4) ul { display: flex; align-items: center; list-style-type: none; margin: 5px 0 }
 .imageflag > div:nth-child(4) > div:nth-child(2) ul { justify-content: right }
 .imageflag > div:nth-child(4) ul span { font-weight: bold; padding-right: 5px }
-.imageflag > div:nth-child(4) ul li     label { display: inline-block; border: 1px solid $secborder$; padding: 4px 5px; min-width: 90px; white-space: nowrap; margin: 2px }
+.imageflag > div:nth-child(4) ul li     label { display: inline-block; border: 1px solid $secborder$; padding: 4px 5px; min-width: 90px; white-space: nowrap; margin: 2px; cursor: pointer }
 .imageflag > div:nth-child(4) ul li.sel label,
 .imageflag > div:nth-child(4) ul li     label:hover { background-color: $secbg$ }
 .imageflag > div:nth-child(4) p { height: 80px; padding-left: 20px }
