--- a/data/style.css
+++ b/data/style.css
@@ -1088,15 +1088,13 @@ p.filselect i { font-style: normal }
 .imageflag > div:nth-child(2) { border: 1px solid $border$; padding: 5px; display: flex; justify-content: center; align-items: center; background: #000 }
 .imageflag > div:nth-child(2) a { border: none; display: inline-block; width: 100%; height: 100%; background-repeat: no-repeat; background-position: center }
 .imageflag > div:nth-child(3) { display: flex; justify-content: space-between; }
-.imageflag > div:nth-child(4) { display: flex }
-.imageflag > div:nth-child(4) > div { flex-grow: 1 }
-.imageflag > div:nth-child(4) ul { display: flex; align-items: center; list-style-type: none; margin: 5px 0 }
-.imageflag > div:nth-child(4) > div:nth-child(2) ul { justify-content: right }
-.imageflag > div:nth-child(4) ul span { font-weight: bold; padding-right: 5px }
-.imageflag > div:nth-child(4) ul li     label { display: inline-block; border: 1px solid $secborder$; padding: 4px 5px; min-width: 90px; white-space: nowrap; margin: 2px; cursor: pointer }
+.imageflag > div:nth-child(4) { display: flex; margin-bottom: 5px }
+.imageflag > div:nth-child(4) p { flex: 1 0; padding-top: 15px }
+.imageflag > div:nth-child(4) ul { list-style-type: none; margin: 0 5px 0 0 }
+.imageflag > div:nth-child(4) ul li:first-child { text-align: center }
+.imageflag > div:nth-child(4) ul li     label { display: inline-block; border: 1px solid $secborder$; padding: 7px; width: 100px; white-space: nowrap; margin: 2px 0; cursor: pointer }
 .imageflag > div:nth-child(4) ul li.sel label,
 .imageflag > div:nth-child(4) ul li     label:hover { background-color: $secbg$ }
-.imageflag > div:nth-child(4) p { height: 80px; padding-left: 20px }
 
 
 /****** Icons *******/
